Darkice next release

    o added cross-platform pthread detection, thanks to
      Steven G. Johnson <stevenj@alum.mit.edu> and
      Alejandro Forero Cuervo <bachue@bachue.com>
      see http://www.gnu.org/software/ac-archive/htmldoc/acx_pthread.html

09-02-2003: DarkIce 0.13 released

    o added feature for setting the TITLE comment field for vorbis
      streams. thanks to Ricardo Galli <gallir@uib.es>
    o bugfix: fixed minor bug in IcecCast2.cpp, which could have lead to
      a buffer overflow. thanks to Atsuhiko Yamanaka <ymnk@jcraft.com>
    o bugfix: MultiThreadedConnector::sinkThread() was private, now public
    o added fileAddDate configuration option
      thanks to Nicu Pavel <npavel@ituner.com>
    o added support for big endian OSS devices (like Linux PowerPC)

20-10-2002: DarkIce 0.12 released

    o ported to FreeBSD (removed reference to MSG_NOSIGNAL in TcpSocket.cpp)
    o bug fix: maximum bitrate setting fixed for Ogg Vorbis streams
    o changed internals so that now each encoding/server connection is
      a separate thread
    o when a connection is dropped, DarkIce tries to reconnect, indefinitely

20-08-2002: DarkIce 0.11 released

    o added possibility to specify maximum bitrate for Ogg Vorbis streams
    o added HTTP Basic authentication for icecast2 logins
    o added mp3 streaming for icecast2
    o added possibility to stream in mono even when recording in stereo,
      thus enabling mono and stereo streams with the same darkice instance.
      only for mp3 streams at the moment
      thanks to Kai Krakow <kai@kaishome.de>
    o bug fix: resampling audio for vorbis streams bugs fixed

02-08-2002: DarkIce 0.10.1 released

    o bug fix: when the last server dropped connection, darkice crashed
      thanks to Nicu Pavel <npavel@ituner.com>
    o bug fix for LameLibEncoder: the mp3 encoding buffer was deleted too
      early, resulting in mp3 data corruption.
      thanks to Nicu Pavel <npavel@ituner.com>
