@@ -17,7 +17,7 @@ AC_HEADER_SYS_WAIT()
 
 AC_TYPE_PID_T()
 AC_TYPE_SIZE_T()
-
+AC_C_BIGENDIAN()
 
 AC_CHECK_LIB( socket, socket)
 AC_CHECK_LIB( nsl, gethostbyname)
